objects/Region__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <type>TextArea</type>
    </fields>
    <label>Regions</label>
</CustomObject>